--- a/configs/config.yml
+++ b/configs/config.yml
@@ -4,5 +4,5 @@ db: username:"postgres"
   password:"1234"
   host:"localhost"
   port:"5432"
-  dbname:todoGolang
+  dbname:"todoGolang"
   sslmode:"disable"
